public/css/2018main_1037.css
/* ... */
.speakers {
	padding-top: 50px;
}

.bio {
	padding-top: 20px;
	padding-bottom: 50px;
}

/* Sponsors */

.sponsors-wrap{
	overflow: hidden;
	padding: 40px 0;
}

.sponsor-row-wrapper {
	justify-content: center;
	padding: 1em 2em;
	position: relative;
}

.sponsor-tera-row-wrapper-wide {
	max-width: 1200px;
	font-size: 0.8em;
	margin: 0 auto;
	margin-bottom: 40px;
	margin-top: 50px;
	width: 100%;
}

.sponsor-giga-row-wrapper-wide {
	max-width: 1000px;
	font-size: 0.8em;
	margin: 0 auto;
	margin-bottom: 60px;
	width: 100%;
}

.sponsor-mega-row-wrapper-wide {
	max-width: 1000px;
	font-size: 0.8em;
	margin: 0 auto;
	margin-bottom: 30px;
	width: 100%;
}

.sponsor-startup-row-wrapper-wide {
	max-width: 900px;
	font-size: 0.8em;
	margin: 0 auto;
	width: 100%;
}

.sponsor-community-row-wrapper-wide {
	max-width: 900px;
	font-size: 0.8em;
	margin: 0 auto;
	margin-bottom: 20px;
	width: 100%;
}

.sponsorship-logo img {
	width: 100%;
	height: 100%
}

.sponsor-logos-tera .sponsorship-logo {
	width: 100%;
	margin: auto
}

.sponsorship-logo--stdlib {
	max-width: 500px
}

.sponsorship-logo--igan {
	max-width: 480px
}

.sponsor-logos-giga {
	display: flex;
	flex-wrap: wrap;
	justify-content: space-around;
	align-items: center;
}

.sponsor-logos-giga .sponsorship-logo {
	width: 100px;
	margin: 0px;
}

.sponsor-logos-giga .sponsorship-logo--sunlife {
	width: 400px
}

.sponsor-logos-giga .sponsorship-logo--kwikee {
	width: 360px
}

.sponsor-logos-mega {
	display: flex;
	flex-wrap: wrap;
	justify-content: space-around;
	align-items: center;
}

.sponsor-logos-mega .sponsorship-logo {
	width: 100px;
	margin: 0px;
}

.sponsor-logos-mega .sponsorship-logo--rbc {
	width: 110px
}

.sponsor-logos-mega .sponsorship-logo--td {
	width: 120px
}

.sponsor-logos-mega .sponsorship-logo--ibm {
	width: 180px
}

.sponsor-logos-mega .sponsorship-logo--scotiabank {
	width: 270px
}

.sponsor-logos-mega .sponsorship-logo--ratehub {
	width: 270px
}

.sponsor-logos-mega .sponsorship-logo--microsoft {
	width: 240px
}

.sponsor-logos-mega .sponsorship-logo--telus {
	width: 260px;
}

.sponsor-logos-mega .sponsorship-logo--deloitte {
	width: 210px;
}

.sponsor-logos-mega .sponsorship-logo--avanade {
	width: 270px;
}

.sponsor-logos-mega .sponsorship-logo--youi {
	width: 130px;
}

.sponsor-logos-startup {
		justify-content: center;
		display: flex;
		flex-wrap: wrap;
		justify-content: space-around;
		align-items: center, baseline;
}

.sponsor-logos-startup .sponsorship-logo {
		width: 110px;
		margin: 20px;
}

.sponsor-logos-startup .sponsorship-logo--1password {
	width: 160px
}

.sponsor-logos-startup .sponsorship-logo--sketch {
	width: 160px;
}

.sponsor-logos-startup .sponsorship-logo--indico {
	width: 120px
}

.sponsor-logos-startup .sponsorship-logo--communitech {
	width: 170px
}

.sponsor-logos-startup .sponsorship-logo--stickermule {
	width: 110px
}

.sponsor-logos-startup .sponsorship-logo--gocubes {
	width: 180px
}

.sponsor-logos-startup .sponsorship-logo--studentxel {
	width: 160px
}

.sponsor-logos-startup .sponsorship-logo--techdomains {
	width: 110px
}

.sponsor-logos-startup .sponsorship-logo--loopio {
	width: 120px
}

.sponsor-logos-startup .sponsorship-logo--wakeups {
	width: 110px;
}

.sponsor-logos-startup .sponsorship-logo--mosaic {
	width: 140px
}

.sponsor-logos-startup .sponsorship-logo--digitalocean {
	width: 100px
}

.sponsor-logos-startup .sponsorship-logo--movember {
	width: 75px;
}

.sponsor-logos-startup .sponsorship-logo--nextcanada {
	width: 140px;
}

.sponsor-logos-startup .sponsorship-logo--wolfram {
	width: 160px;
}

.sponsor-logos-startup .sponsorship-logo--ritual {
	width: 140px;
}

.sponsor-logos-startup .sponsorship-logo--balsamiq {
	width: 140px;
}

.sponsor-logos-startup .sponsorship-logo--diid {
	width: 100px;
}

.sponsor-logos-startup .sponsorship-logo--launchacademy {
	width: 160px;
}

.sponsor-logos-startup .sponsorship-logo--logdna {
	width: 140px;
}

.sponsor-logos-startup .sponsorship-logo--seedbelt {
	width: 160px;
}

.sponsor-logos-startup .sponsorship-logo--jetbrains {
	width: 85px;
}

.sponsor-logos-startup .sponsorship-logo--twilio {
	width: 140px;
}

.sponsor-logos-startup .sponsorship-logo--aventec {
	width: 90px;
}

.sponsor-logos-startup .sponsorship-logo--rlsolutions {
	width: 180px;
}

.sponsor-logos-startup .sponsorship-logo--xesto {
	width: 140px;
}

.sponsor-logos-startup .sponsorship-logo--thinkresearch {
	width: 120px;
}

.sponsor-logos-startup .sponsorship-logo--esight {
	width: 130px;
}


.sponsor-logos-community {
	justify-content: center;
	display: flex;
	flex-wrap: wrap;
	justify-content: space-around;
	align-items: center, baseline;
}

.sponsor-logos-community .sponsorship-logo--ece {
	width: 180px
}

.sponsor-logos-community .sponsorship-logo--ams {
	width: 200px
}

.sponsor-logos-community .sponsorship-logo--qic {
	width: 370px
}

.sponsor-logos-community .sponsorship-logo--mmie {
	width: 340px
}

.sponsor-logos-community .sponsorship-logo--sodexo {
	width: 400px
}

.sponsor-logos-community .sponsorship-logo--bloomberg {
	width: 220px;
}

.sponsor-logos-community .sponsorship-logo--github {
	margin-bottom: 14px;
	width: 140px;
}

.sponsor-logos-community .sponsorship-logo--mlh {
		width: 150px;
}

.sponsor-logos-community .sponsorship-logo--ukrlogic {
		width: 220px;
}

.sponsor-logos-community .sponsorship-logo--computing {
		width: 300px;
}


/* Media Queries */

@media only screen and (max-width: 950px) {
	.logo{
		position: relative;
		top:70px;
		height: 100%;
		width: 100%;
		max-height: 250px;
		max-width: 250px;
	}

	h2.sub_title{
		font-weight: 400;
		font-size: 1.5em;
		letter-spacing: 0.5px;
		margin-bottom: 5px;
		margin-top: 30px;
		padding-top: 20px;
	}
	.sub-title{
		color: #464646;
		font-weight: 400;
		letter-spacing: 0.5px;
	}
	#header-title .btn_row{
		margin-top: 20px;
		margin-bottom: 5px;
	}
}
/* ... */

